--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -192,10 +192,10 @@ P̵̫̊h̴̪̑ì̶̯s̵̫̀h̸̠̆i̶̔͜n̸̞͒g̶̳̏ ̸̺͐a̴͎̓n̷̜̕d̴
 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 
+Move $ct['dev']['jup_ag_ticker_adjust'] into the admin 'currency support' section. Use same type logic as currency symbols setting. Also add notes on the search page for adding new markets for jupiter, since people should know jupiter market ids may need CASE SENSITIVE mapping (include a note that this app WILL NEVER support MULTIPLE CASES of same ticker [beyond this mapping feature]). IMPORTANT: THE TICKER TO CONVERT FROM MUST ALWAYS BE FORCED TO UPPERCASE, AS WE USUALLY ALWAYS FORCE JUPITER MARKETS TO UPPERCASE...THE TICKER WE ARE CONVERTING TO MUST BE CASE-SENSITIVE! Keep this in mind when building the auto-correct / checks for this user input.
+
+
 Add checks for 'presale usd', for skipping already-added asset markets, when searching for asset markets to add on the portfolio assets admin page. Currently, it's NOT skipping already-added presale markets.
-
-
-TORTURE TEST all the different combinations of add market search on the 'portfolio assets' page, in the admin interface.
 
 
 BUILDOUT THE BACK END FOR ASSET MARKET DELETION.
@@ -203,6 +203,9 @@ BUILDOUT THE BACK END FOR ASSET MARKET DELETION.
 
 Look into "tooltips" / "more information on hover info icon", for jstree showing more information on an entry:
 https://stackoverflow.com/questions/59205386/how-do-i-add-a-tooltip-to-a-specific-jstree-node
+
+
+TORTURE TEST all the different combinations of add / delete markets on the 'portfolio assets' page, in the admin interface.
 
 
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~DO AN APP RELEASE AT THIS POINT IN THIS LIST~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
