--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -78,6 +78,8 @@ GENERAL REMINDERS
 ===> "developer-config.php" contains MANY MANY MANY developer-only configs!
 !!!!
 ===> Don't require any higher than PHP v7.2 until PHP v9 has been out awhile.
+!!!!
+===> https://www.threesl.com/blog/special-characters-regular-expressions-escape/
 !!!!                                                            
 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
@@ -192,20 +194,26 @@ P̵̫̊h̴̪̑ì̶̯s̵̫̀h̸̠̆i̶̔͜n̸̞͒g̶̳̏ ̸̺͐a̴͎̓n̷̜̕d̴
 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 
-BUILDOUT THE BACK END FOR ASSET MARKET DELETION.
+Add checks for 'presale usd', for skipping already-added asset markets, when searching for asset markets to add on the portfolio assets admin page. Currently, it's NOT skipping already-added presale markets.
+
+
+BUILDOUT THE BACK END FOR ASSET MARKET DELETION. For Ethereum and Solana, we need to require at least one Bitcoin pair market (not allowed to be deleted via interface), just like we do for every Bitcoin pairing, so the app functions properly.
 
 
 Look into "tooltips" / "more information on hover info icon", for jstree showing more information on an entry:
 https://stackoverflow.com/questions/59205386/how-do-i-add-a-tooltip-to-a-specific-jstree-node
 
 
-Add checks for 'presale usd', for skipping already-added asset markets, when searching for asset markets to add on the portfolio assets admin page. Currently, it's NOT skipping already-added presale markets.
+TORTURE TEST ADDING / DELETING ASSETS AND MARKETS.
 
 
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~DO AN APP RELEASE AT THIS POINT IN THIS LIST~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 
 Do a bitcoin opentimestamp of the v6.00.39 release.
+
+
+Pretty up the light theme CSS text / link coloring, as it's missing decent CONTRAST here and there.
 
 
 Name / mcap slug should be EDITABLE on the portfolio assets admin page. Make sure to sanitize the user-inputted name (like we do when adding markets via interface).
