--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -209,6 +209,9 @@ Test new setup wizard architecture in Firefox.
 TORTURE TEST ADDING / DELETING ASSETS AND MARKETS.
 
 
+Test add / delete markets INTERFACE on raspi zero w (1st gen).
+
+
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~DO AN APP RELEASE AT THIS POINT IN THIS LIST~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 
