--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -197,16 +197,16 @@ P̵̫̊h̴̪̑ì̶̯s̵̫̀h̸̠̆i̶̔͜n̸̞͒g̶̳̏ ̸̺͐a̴͎̓n̷̜̕d̴
 valid_secure_config_update_request() test isn't passing for delete assets, because the structure isn't within params normally used for updating the cached config.
 
 
-Our newly added jupiter trade volume data isnt working on crypto price charts, maybe price alerts too?
-
-
-BUILDOUT THE BACK END FOR ASSET MARKET DELETION.
+FINISH BUILDOUT OF THE BACK END FOR ASSET MARKET DELETION.
 
 
 Test new setup wizard architecture in Firefox.
 
 
 TORTURE TEST ADDING / DELETING ASSETS AND MARKETS.
+
+
+Test add / delete markets INTERFACE on raspi zero w (1st gen).
 
 
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~DO AN APP RELEASE AT THIS POINT IN THIS LIST~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
